# onyx-erp

./: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/entities/: category.rs  client.rs  client_gallon.rs  mod.rs  payment_method.rs  product.rs  sale.rs  shipping_method.rs  user.rs
src/components/: AppLayout.tsx  Logo.tsx  NovaVendaForm.tsx  PrintPreviewModal.tsx  SaleReceipt.tsx  StatusBadge.tsx  UpdateChecker.tsx  theme-provider.tsx
src/hooks/: use-confirm.tsx  use-updater.ts
src/lib/: companySettings.ts
src/lib/utils/: masks.ts
src/pages/: Clientes.tsx  Configuracoes.tsx  Dashboard.tsx  Login.tsx  NovaVenda.tsx  Produtos.tsx  Relatorios.tsx  Vendas.tsx
updater/: latest.json
